--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -1,3 +1,9 @@
-body{
-    display: block;
+main{
+    width: 100%;
+    height: 100vh;
+
+    >div{
+        width: 100%;
+        height: 100%;
+    }
 }
