--- a/src/components/scss/account.scss
+++ b/src/components/scss/account.scss
@@ -18,17 +18,7 @@
     font-size: 20px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
-    @mixin glow {
-	@include hacks();
-	@include prefixed(transition-duration, $mediumDuration);
-	@include prefixed(transition-property, box-shadow);
-
-	&:hover,
-	&:focus,
-	&:active {
-		box-shadow: 0 0 8px $shadowColor;
-	    }
-    }
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 .btn {
   display: inline-block;
