--- a/src/components/scss/account.scss
+++ b/src/components/scss/account.scss
@@ -1,4 +1,4 @@
-#login {
+#login, #register, #oauth2callback {
     display: table;
     margin: auto;    
     margin-top: 200px;
@@ -43,9 +43,4 @@
   -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   margin: 5px;
-}
-
-register {
-    display: table;
-    margin: auto;    
 }
