--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -11,9 +11,12 @@ body{
 
 main{
     width: 100%;
-    height: calc(100vh - 200px);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
 
-    >div{
+    > div {
         width: 100%;
         height: 100%;
     }
