--- a/src/components/scss/account.scss
+++ b/src/components/scss/account.scss
@@ -1,4 +1,4 @@
-#login, #register, #oauth2callback {
+#login, #register, #oauth2callback, #register-confirmation, #email-confirmation {
     display: table;
     margin: auto;    
     margin-top: 200px;
