--- a/src/components/scss/chat.scss
+++ b/src/components/scss/chat.scss
@@ -1,3 +1,57 @@
 chat{
     display: block;
+
+    #chat-component {
+        // width: 550px;
+        height: calc(100vh - 100px);
+
+        .chat-clients {
+
+            >div{
+                cursor: pointer;
+                
+                .online {
+                    color: green;
+                }
+            }
+        }
+
+        .chat-channel{
+            height: 100%;
+
+            .message-container{
+                height: calc(100% - 100px);
+                width: 100%;
+
+                .messages-listrelative {
+                    background-color: white;
+                    height: calc(100% - 40px);
+                    width: 100%;
+                    position: relative;
+
+                    .messages-list{
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                        width: 100%;
+
+                        .message {
+                            float: left;
+                        }
+                    }
+                }
+            }
+
+            .footer {
+
+                input {
+                    margin-right: 10px;
+                    padding: 3px 10px;
+                    border: none;
+                    outline: none;
+                    border-radius: 5px; 
+                }
+            }
+        }
+    }
 }
