--- a/src/components/scss/home.scss
+++ b/src/components/scss/home.scss
@@ -24,4 +24,8 @@
         -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
         transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
     }
+
+    input {
+        color: black;
+    }
 }
