--- a/src/components/scss/chat.scss
+++ b/src/components/scss/chat.scss
@@ -5,6 +5,31 @@ chat{
         // width: 550px;
         height: calc(100vh - 100px);
 
+        .users {
+
+            >div {
+                width: 100%;
+            }
+
+            .search {
+
+            }
+
+            .userslist {
+
+                >div{
+                    width: 100%;
+
+                    .username {
+                        width: calc(100% - 30px);
+                    }
+
+                    .selected {
+                        width: 30px;
+                    }
+                }
+            }
+        }
         .chat-clients {
 
             >div{
@@ -30,15 +55,32 @@ chat{
                     position: relative;
 
                     .messages-list{
-                        position: absolute;
-                        left: 0;
-                        bottom: 0;
+                        // position: absolute;
+                        // left: 0;
+                        // bottom: 0;
                         width: 100%;
+                        display: flex;
+                        flex-direction: column-reverse;
+                        height: 100%;
 
                         .message {
                             text-align: left;
+                            margin: 5px 20px;
+                            display: inline-block;
+                            width: calc(100% - 40px);
+
+                            >div{
+                                border-radius: 15px;
+                                padding: 20px;
+                                width: calc(100% - 40px);
+                                float: left;
+                                background-color: rgba(244, 192, 175, 0.13);
+                            }
+
                             .my-message {
                                 text-align: right;
+                                float: right;
+                                background-color: rgba(204, 204, 204, 0.17);
                             }
                         }
                     }
