--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -21,3 +21,23 @@ main{
         height: 100%;
     }
 }
+
+inline{
+    display: inline-block;
+}
+
+left {
+    float: left;
+}
+
+right {
+    float: right;
+}
+
+.span-overflow{
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin: 0;
+}
